--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^13.0.0 || ^14.0.0",
+    "@radix-ui/colors": "^0.1.8",
     "angular-mentions": "^1.4.0",
     "ngx-popperjs": "^14.1.0",
     "rxjs": "~7.5.0",
