--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "@ngx-translate/core": "^13.0.0 || ^14.0.0",
-    "@radix-ui/colors": "^0.1.8",
-    "angular-mentions": "^1.4.0",
-    "ngx-popperjs": "^14.1.0",
-    "rxjs": "~7.5.0",
-    "stream-chat": "^6.4.0",
-    "stream-chat-angular": "4.0.0-theming-v2.4",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.1.1",
+    "@angular/common": "14.1.1",
+    "@angular/compiler": "14.1.1",
+    "@angular/core": "14.1.1",
+    "@angular/forms": "14.1.1",
+    "@angular/platform-browser": "14.1.1",
+    "@angular/platform-browser-dynamic": "14.1.1",
+    "@angular/router": "14.1.1",
+    "@ngx-translate/core": "14.0.0",
+    "@radix-ui/colors": "0.1.8",
+    "angular-mentions": "1.5.0",
+    "docker-names": "^1.2.1",
+    "ngx-popperjs": "14.1.0",
+    "rxjs": "7.5.6",
+    "stream-chat": "^6.7.3",
+    "stream-chat-angular": "4.0.0-theming-v2.9",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
