--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
     "@ngx-translate/core": "14.0.0",
+    "@popperjs/core": "^2.9.2",
     "@radix-ui/colors": "0.1.8",
     "angular-mentions": "1.5.0",
     "docker-names": "^1.2.1",
-    "ngx-popperjs": "14.1.0",
+    "ngx-popperjs": "12.2.1",
     "rxjs": "7.5.6",
     "stream-chat": "^6.7.3",
     "stream-chat-angular": "4.0.0-theming-v2.9",
