--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "docker-names": "^1.2.1",
     "rxjs": "7.5.6",
     "stream-chat": "^6.7.3",
-    "stream-chat-angular": "4.0.0-theming-v2.13",
+    "stream-chat-angular": "^4.0.0",
     "tslib": "2.4.0",
     "zone.js": "0.11.7"
   },
