--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@radix-ui/colors": "0.1.8",
     "angular-mentions": "1.5.0",
     "docker-names": "^1.2.1",
-    "ngx-popperjs": "14.1.0",
+    "ngx-popperjs": "^14.1.0",
     "rxjs": "7.5.6",
     "stream-chat": "^6.7.3",
-    "stream-chat-angular": "4.0.0-theming-v2.9",
+    "stream-chat-angular": "^4.0.0",
     "tslib": "2.4.0",
     "zone.js": "0.11.7"
   },
