--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "14.1.1",
     "@ngx-translate/core": "14.0.0",
     "@radix-ui/colors": "0.1.8",
-    "angular-mentions": "1.5.0",
+    "angular-mentions": "^1.5.0",
     "docker-names": "^1.2.1",
     "ngx-popperjs": "^14.1.0",
     "rxjs": "7.5.6",
